add ajax functionality

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,29 @@
 <h1><%= @restaurant.name %> <small><%= @restaurant.address %></small></h1>
 
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
+ <p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dolorem cupiditate necessitatibus eum nostrum totam perspiciatis corrupti accusamus, optio numquam, soluta magnam, dolore voluptatem. Doloribus repellat minus, quibusdam quis.
+</p>
+
 <h2>
   <%= pluralize @restaurant.reviews.size, "review" %>
 </h2>
